k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supportcarr
  labels:
    name: supportcarr
    environment: production
